# mvcopy

./: Cargo.toml  todo.txt
src/: cpcopy.rs  cppaste.rs
