[package]
name = "cpcopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["default", "derive"] }
fs_extra = "1.3.0"

[[bin]]
name = "cpcopy"
path = "src/cpcopy.rs"

[[bin]]
name = "cppaste"
path = "src/cppaste.rs"
